--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check it Out</a></li>
+									<li><a href="https://github.com/priyadarshisanjay/Pyshop-Django" class="button large">Check it Out</a></li>
 								</ul>
 							</article>
 
