--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Personal Website</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">About Sanjay Priyadarshi</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="www.linkedin.com/in/priyadarshisanjay" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
@@ -53,7 +53,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/priyadarshisanjay/Pyshop-Django" class="button large">Check it Out</a></li>
+									<li><a href= https://github.com/priyadarshisanjay class="button large">Click to see Github</a></li>
 								</ul>
 							</article>
 
@@ -61,23 +61,23 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project 1</a></h2>
+										<h2>BloggingWizard</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This is a backend development project using Django.Implemented with the help of Django girls blog. In this project I implemented several features adding and deleting posts,one can edit there post,also someone can comment on others post.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check it Out</a></li>
+										<li><a href="https://github.com/priyadarshisanjay/my-first-blog" class="button">Check it Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										
-										<h2><a href="#">Project 2</a></h2>
+										<h2>AdminDashboard</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This a AdminDashboard project. If you log in to any website by using email and password or sign in using gmail or anything similar you will see every one has an admin section. I implemented that using some frontend tools like Html, css, Js and Bootstrap.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check it Out</a></li>
+										<li><a href="https://github.com/priyadarshisanjay/AdminDashboard" class="button">Check it Out</a></li>
 									</ul>
 								</article>
 							</section>
@@ -95,7 +95,7 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">8240050050</a></p>
+								<p><a href="#">8240683396</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
@@ -104,7 +104,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="www.linkedin.com/in/priyadarshisanjay" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
+									<li><a href="www.linkedin.com/in/priyadarshisanjay" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/priyadarshisanjay" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
