--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li class="active"><a href="index.html">About Sanjay Priyadarshi</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="www.linkedin.com/in/priyadarshisanjay" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.linkedin.com/in/priyadarshisanjay/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/priyadarshisanjay" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -104,7 +104,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="www.linkedin.com/in/priyadarshisanjay" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/priyadarshisanjay/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/priyadarshisanjay" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
